--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,3 +1,3 @@
 <% @posts.each do |post| %>
-  <%= link_to post.title, show_post_path(post) %>
+  <h2><%= link_to post.title, show_post_path(post) %></h2>
 <% end %>
