--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,11 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+<% if session[:user_id] %>
+  <%= link_to "logout", logout_path %>
+<% else %>
+  <% erb :_login, layout: false %>
+<% end %> 
 <%= yield %>
 
 </body>
