--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 <% if session[:user_id] %>
   <%= link_to "logout", logout_path %>
 <% else %>
-  <% erb :_login, layout: false %>
+  <%= render "sessions/new" %>
 <% end %> 
 <%= yield %>
 
